--- a/hadoop-3.2/example/tasknode/docker-compose.yml
+++ b/hadoop-3.2/example/tasknode/docker-compose.yml
@@ -1,9 +1,8 @@
 version: "2"
 services:
   tasknode:
-    image: modenaf360/tasknode:latest
+    image: modenaf360/hadoop-tasknode:latest
     container_name: tasknode
-    hostname: tasknode
     environment:
       - CLUSTER_NAME=test
     env_file:
