[hyeonsangjeon] dfs.namenode.datanode.registration.ip-hostname-check false

--- a/hadoop-3.2/hadoop.env
+++ b/hadoop-3.2/hadoop.env
@@ -39,6 +39,7 @@ HDFS_CONF_dfs_replication=3
 HDFS_CONF_dfs_namenode_name_dir=/usr/local/hadoop/dfs/name
 HDFS_CONF_dfs_datanode_data_dir=/usr/local/hadoop/dfs/data
 HDFS_CONF_dfs_namenode_http___address=0.0.0.0:50070
+HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check=false
 
 YARN_CONF_yarn_nodemanager_vmem___check___enabled=false
 YARN_CONF_yarn_log___aggregation___enable=true
