--- a/hadoop-3.2/hadoop.env
+++ b/hadoop-3.2/hadoop.env
@@ -13,6 +13,8 @@ MAPRED_CONF_mapreduce_reduce_memory_mb=1024
 MAPRED_CONF_yarn_app_mapreduce_am_resource_mb=1024
 MAPRED_CONF_mapreduce_map_java_opts=-Xmx1024m
 MAPRED_CONF_mapreduce_reduce_java_opts=-Xmx1638m
+YARN_CONF_yarn_timeline___service_hostname=master
+YARN_CONF_yarn_log_server_url=http://master:8188/applicationhistory/logs/
 HDFS_CONF_fs_s3a_access_key=accecckey
 HDFS_CONF_fs_s3a.endpoint=endpoint
 HDFS_CONF_fs_s3a_secret_key=secretkey
@@ -58,5 +60,10 @@ MAPRED_CONF_mapreduce_framework_name=yarn
 MAPRED_CONF_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=${HADOOP_HOME}
 MAPRED_CONF_mapreduce_map_env=HADOOP_MAPRED_HOME=${HADOOP_HOME}
 MAPRED_CONF_mapreduce_reduce_env=HADOOP_MAPRED_HOME=${HADOOP_HOME}
+
+
+YARN_CONF_yarn_timeline___service_enabled=true
+YARN_CONF_yarn_timeline___service_generic___application___history_enabled=true
+YARN_CONF_yarn_timeline___service_leveldb___timeline___store_path=/hadoop/yarn/timeline
 
 
