[hyeonsangjeon] ConnectionDriverName change

--- a/hive/hadoop-hive.env
+++ b/hive/hadoop-hive.env
@@ -1,6 +1,4 @@
-HIVE_SITE_CONF_hive_metastore_local=true
-HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=com.mysql.jdbc.Driver
-
+HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=com.mysql.cj.jdbc.Driver
 HIVE_SITE_CONF_datanucleus_autoCreateSchema=true
 HIVE_SITE_CONF_datanucleus_fixedDatastore=false
 HIVE_SITE_CONF_hive_metastore_uris=thrift://hive:9083
