--- a/hive/example/external-metastore-compose.yml
+++ b/hive/example/external-metastore-compose.yml
@@ -8,6 +8,9 @@ services:
       HIVE_SITE_CONF_javax_jdo_option_ConnectionURL: 'jdbc:mysql://hive-mariadb:3306/hivemetastore?createDatabaseIfnotExists=true'
       HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName: 'hive'
       HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword: '1234'
+      HIVE_SITE_CONF_hive_metastore_local: 'false'
+      DB_TYPE: 'mysql'
+      SERVICE_PRECONDITION: 'hive-mariadb:3306'
     ports:
     - 10000:10000/tcp
     - 9083:9083/tcp
@@ -29,6 +32,8 @@ services:
       MYSQL_USER: 'hive'
       MYSQL_PASSWORD: '1234'
       MYSQL_DATABASE: 'hivemetastore'
+    volumes:
+    - ./mariadb:/var/lib/mysql
     ports:
     - 3306:3306/tcp
     command:
