[hyeonsangjeon] hive yarn mode env add

--- a/hive/hadoop-hive.env
+++ b/hive/hadoop-hive.env
@@ -29,3 +29,15 @@ YARN_CONF_yarn_resourcemanager_resource___tracker_address=master:8031
 
 HIVE_SITE_CONF_hive_metastore_schema_verification=false
 HIVE_SITE_CONF_hive_metastore_schema_verification_record_version=false
+
+
+MAPRED_CONF_mapreduce_framework_name=yarn
+MAPRED_CONF_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=${HADOOP_HOME}
+MAPRED_CONF_mapreduce_map_env=HADOOP_MAPRED_HOME=${HADOOP_HOME}
+MAPRED_CONF_mapreduce_reduce_env=HADOOP_MAPRED_HOME=${HADOOP_HOME}
+MAPRED_CONF_mapred_job_tracker=master:54311
+
+
+
+
+
